implemented email verification

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 DB_HOST=<please insert here mongodb connect string>
 SECRET_KEY=<add JWT secret here>
+DB_HOST_TEST=<<please insert here mongodb test connect string>>
+
+SENDGRID_KEY=<please insert sendgrid key>
+
+
